--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,3 +24,4 @@ dev = [
 brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_games:run_even_game"
 brain-calc = "brain_games.scripts.brain_games:run_calc_game"
+brain-gcd = "brain_games.scripts.brain_games:run_gcd_game"
