--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,4 +25,5 @@ brain-games = "brain_games.scripts.brain_games:main"
 brain-even = "brain_games.scripts.brain_games:run_even_game"
 brain-calc = "brain_games.scripts.brain_games:run_calc_game"
 brain-gcd = "brain_games.scripts.brain_games:run_gcd_game"
-brain-run-progression = "brain_games.scripts.brain_games:run_progression_game"
+brain-progression = "brain_games.scripts.brain_games:run_progression_game"
+brain-prime = "brain_games.scripts.brain_games:run_prime_game"
