--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [project]
-name = "hexlet-code"
+name = "brain-games"
 version = "0.1.0"
-description = "Add your description here"
+description = "Учебный проект #1 в рамках учебного курса Hexlet"
+authors = [
+    { name = "Oleg Brekalo", email = "brekalooleg@gmail.com" },
+]
 readme = "README.md"
 requires-python = ">=3.14"
 dependencies = [
