--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
-name = "brain-games"
+name = "hexlet-code"
 version = "0.1.0"
 description = "Учебный проект #1 в рамках учебного курса Hexlet"
 authors = [
     { name = "Oleg Brekalo", email = "brekalooleg@gmail.com" },
 ]
 readme = "README.md"
-requires-python = ">=3.14"
+requires-python = ">=3.13"
 dependencies = [
     "prompt>=0.4.1",
 ]
